src/components/Projects.css
.projects-page {
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.projects-title {
    flex-basis: 40%;
    flex-shrink: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    height: 100vh;
}

.projects-title h2 {
    font-size: 2.25rem;
    font-weight: 200;
}

.projects-container {
    flex-basis: 50%;
    flex-grow: 0;
    height: 100vh;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

@media screen and (max-width: 1200px){
    .projects-page {
        flex-direction: column;
    }
}

@media screen and (max-width: 620px) {
    
}

